completed header and first section below header

--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
   Terms
   Privacy
 
+  <img src="images/bg-curvy-desktop.svg" alt="">
+
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
