--- a/preview.html
+++ b/preview.html
@@ -4,10 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <title>Frontend Mentor | Fylo landing page with dark theme and features grid</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <div class="headerDiv">  <!--headerDiv-->
+        <div>  <!--headerDivFirst-->
+            <img src="images/logo.svg" alt="">
+        </div>
+        <div>
+            <span>Features</span>
+            <span>Team</span>
+            <span>Sign In</span>
+        </div>
+    </div>
+
+    <div class="sectionOneDiv">  <!--sectionOneDiv-->
+        <div class="sectionOneDivFirst">  <!--sectionOneDivFirst-->
+            <img src="images/bg-curvy-desktop.svg" alt="">
+            <img src="images/illustration-intro.png" alt="">
+        </div>
+        <div class="sectionOneDivSecond">   <!--sectionOneDivSecond-->
+            <p>All your files in one secure location, accessible anywhere.</p>
+            <p> Fylo stores all your most important files in one secure location. Access them wherever 
+                you need, share and collaborate with friends family, and co-workers.</p>
+            <button>Get Started</button>
+        </div>
+    </div>
     
 </body>
 </html>
