--- a/preview.html
+++ b/preview.html
@@ -25,7 +25,7 @@
         </div>
     </div>
 
-    <div class="sectionOneDiv">  <!--sectionOneDiv-->
+    <section class="sectionOneDiv">  <!--sectionOneDiv-->
         <div class="sectionOneDivFirst">  <!--sectionOneDivFirst-->
             <img src="images/bg-curvy-desktop.svg" alt="">
             <img src="images/illustration-intro.png" alt="">
@@ -36,7 +36,97 @@
                 you need, share and collaborate with friends family, and co-workers.</p>
             <button>Get Started</button>
         </div>
-    </div>
+    </section>
     
+    <section class="sectionSecond">  <!--sectionSecond-->
+        <table >
+            <tr>
+                <td class="sectionSecondContainer">    <!--sectionSecondContainer-->  
+                    <img src="images/icon-access-anywhere.svg" alt="">
+                    <p>Access your files, anywhere</p>
+                    <p> The ability to use a smartphone, tablet, or computer to access your account means your 
+                        files follow you everywhere.</p>
+                </td>
+                <td class="sectionSecondContainer">    <!--sectionSecondContainer-->
+                    <img src="images/icon-security.svg" alt="">
+                    <p>Security you can trust</p>
+                    <p> 2-factor authentication and user-controlled encryption are just a couple of the security 
+                        features we allow to help secure your files.</p>
+                </td>
+            </tr>
+            <tr>
+                <td class="sectionSecondContainer">    <!--sectionSecondContainer-->
+                    <img src="images/icon-collaboration.svg" alt="">
+                    <p>Real-time collaboration</p>
+                    <p>Securely share files and folders with friends, family and colleagues for live collaboration. 
+                        No email attachments required.</p>
+                </td>
+                <td class="sectionSecondContainer">    <!--sectionSecondContainer-->
+                    <img src="images/icon-any-file.svg" alt="">
+                    <p>Store any type of file</p>
+                    <p>Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all 
+                        file types to be securely stored and shared.</p>
+                </td>
+            </tr>
+        </table>
+    </section>
+
+    <section class="sectionThird">  <!--sectionThird-->
+        <div class="sectionThirdFirst">  <!--sectionThirdFirst-->
+            <img src="images/illustration-stay-productive.png" alt="">
+        </div>
+        <div class="sectionThirdSecond">  <!--sectionThirdSecond-->
+            <p>Stay productive, wherever you are</p>
+            <p>Never let location be an issue when accessing your files. Fylo has you covered for all of your file 
+                storage needs.</p>
+            <p>Securely share files and folders with friends, family and colleagues for live collaboration. No email 
+                attachments required.</p>
+            <div>
+                <p>See how Fylo works</p>
+                <img src="images/icon-arrow.svg" alt="arrow-icon">
+            </div>
+        </div>
+    </section>
+
+    <section class="sectionForth">   <!--sectionForth-->
+        <table>
+            <tr>
+                <td>
+                    <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
+                        become a well-oiled collaboration machine.</p>
+                    <div>
+                        <img src="images/profile-1.jpg" alt="">
+                        <div>
+                            <p>Satish Patel</p>
+                            <p>Founder & CEO, Huddle</p>
+                        </div>
+                    </div>
+                </td>
+                
+                <td>
+                    <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
+                        become a well-oiled collaboration machine.</p>
+                    <div>
+                        <img src="images/profile-2.jpg" alt="">
+                        <div>
+                            <p>Bruce McKenzie</p>
+                            <p>Founder & CEO, Huddle</p>
+                        </div>
+                    </div>
+                </td>
+                <td>
+                    <p> Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
+                        become a well-oiled collaboration machine.</p>
+                    <div>
+                        <img src="images/profile-3.jpg" alt="">
+                        <div>
+                            <p>Iva Boyd</p>
+                            <p>Founder & CEO, Huddle</p>
+                        </div>
+                    </div>
+                </td>
+            </tr>
+        </table>
+    </section>
 </body>
 </html>
