--- a/preview.html
+++ b/preview.html
@@ -128,5 +128,54 @@
             </tr>
         </table>
     </section>
+
+    <section class="sectionFifth">  <!--sectionFifth-->
+        <p>Get early access today</p>
+        <p>It only takes a minute to sign up and our free starter tier is extremely generous. If you have any 
+            questions, our support team would be happy to help you.</p>
+        <div>
+            <input type="text">
+            <button>Get Started For Free</button>
+        </div>
+    </section>
+
+    <section class="sectionSixth">  <!--sectionSixth-->
+        <div class="sectionSixthFirst sectionSixthFirstDiv">   <!--sectionSixthFirst-->
+            <div class="">
+                <img src="images/logo.svg" alt="">
+            </div>
+            <div>
+                <img src="images/icon-location.svg" alt="">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
+                    dolore magna aliqua</p>
+            </div>
+        </div>
+        <div class="sectionSixthFirst sectionSixthFirstAddress">   <!--sectionSixthFirst-->
+            <div>
+                <img src="images/icon-phone.svg" alt="">
+                <p>+1-543-123-4567</p>
+            </div>
+            <div>
+                <img src="images/icon-email.svg" alt="">
+                <p>example@fylo.com</p>
+            </div>
+        </div>
+        <div class="sectionSixthFirst ">   <!--sectionSixthFirst-->
+            <li>About Us</li>
+            <li>Jobs</li>
+            <li>Press</li>
+            <li>Blog</li>
+        </div>
+        <div class="sectionSixthFirst">   <!--sectionSixthFirst-->
+            <li>Contact Us</li>
+            <li>Term</li>
+            <li>Privacy</li>
+        </div>
+        <div class="sectionSixthFirst social-image ">   <!--sectionSixthFirst-->
+            <img src="images/facebook-brands.svg" alt="">
+            <img src="images/twitter-brands.svg" alt="">
+            <img src="images/instagram-brands.svg" alt="">
+        </div>
+    </section>
 </body>
 </html>
