--- a/preview.html
+++ b/preview.html
@@ -10,6 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <title>Frontend Mentor | Fylo landing page with dark theme and features grid</title>
     <link rel="stylesheet" href="index.css">
 </head>
@@ -172,10 +174,20 @@
             <li>Privacy</li>
         </div>
         <div class="sectionSixthFirst social-image ">   <!--sectionSixthFirst-->
-            <img src="images/facebook-brands.svg" alt="">
+            <!-- <img src="images/facebook-brands.svg" alt="">
             <img src="images/twitter-brands.svg" alt="">
-            <img src="images/instagram-brands.svg" alt="">
+            <img src="images/instagram-brands.svg" alt=""> -->
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
         </div>
     </section>
+
+    <footer>
+        <p class="attribution">
+          Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+          Coded by <a href="https://github.com/mausam-kumar/fylo-landing-page-frontend" target="_blank">Mausam</a>.
+        </p>
+    </footer>
 </body>
 </html>
